# pneumonia-classification

./: LICENSE  Makefile  pyproject.toml
docs/: Makefile  conf.py  index.rst
notebooks/: model_training_v1.ipynb
pneumonica-classification.git/: README.md  setup.py
pneumonica-classification.git/docs/: make.bat
